--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,5 +25,11 @@ flutter:
   uses-material-design: true
   assets:
      - images/
+  fonts:
+  - family: Anton
+    fonts:
+    - asset: fonts/Anton-Regular.ttf
+
+
 
 
